update tabs, pills

--- a/bootstrap-elements.html
+++ b/bootstrap-elements.html
@@ -255,6 +255,9 @@
                             <a href="javascript:void(0)" class="btn btn-warning">Warning</a>
                             <a href="javascript:void(0)" class="btn btn-danger">Danger</a>
                             <a href="javascript:void(0)" class="btn btn-link">Link</a>
+                            <a href="javascript:void(0)" class="btn btn-create">Create</a>
+                            <a href="javascript:void(0)" class="btn btn-register">Register</a>
+                            <a href="javascript:void(0)" class="btn btn-login">Login</a>
                         </p>
                         <h3>Flat buttons</h3>
                         <p class="bs-component">
